--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- Container Principal -->
     <div class="main-container">
-        <h1 class="main-title">Bem-vindo à Nossa Loja!</h1>
+        <h1 class="main-title">Bem-vindo ao Inventando moda!</h1>
 
         <!-- Grade de Produtos -->
         <div class="product-grid">
