--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
         <!-- Grade de Produtos -->
         <div class="product-grid">
             <div class="product-card">
-                <img src="https://via.placeholder.com/250x200" alt="Produto 1" class="product-image">
+                <img src="img/WhatsApp Image 2025-05-19 at 20.53.51.jpeg" alt="Produto 1" class="product-image">
                 <div class="product-name">Produto 1</div>
-                <div class="product-price">R$ 99,90</div>
+                <div class="product-price">R$ 0,00</div>
             </div>
             <div class="product-card">
-                <img src="https://via.placeholder.com/250x200" alt="Produto 2" class="product-image">
+                <img src="img/WhatsApp Image 2025-05-19 at 20.53.52 (1).jpeg" alt="Produto 2" class="product-image">
                 <div class="product-name">Produto 2</div>
-                <div class="product-price">R$ 149,90</div>
+                <div class="product-price">R$ 0,00</div>
             </div>
             <div class="product-card">
-                <img src="https://via.placeholder.com/250x200" alt="Produto 3" class="product-image">
+                <img src="img/WhatsApp Image 2025-05-19 at 20.53.52.jpeg" alt="Produto 3" class="product-image">
                 <div class="product-name">Produto 3</div>
-                <div class="product-price">R$ 79,90</div>
+                <div class="product-price">R$ 0,00</div>
             </div>
         </div>
     </div>
